# meta-ai-openenv-irrigation

./: README.md  environment.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
meta-ai-openenv-farm/: Dockerfile  README.md  environment.py  main.py  models.py  openenv.yaml
server/: app.py
