[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-irrigation-env"
version = "0.1.0"
description = "Precision agriculture simulation for Meta OpenEnv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]